--- a/src/components/ActionIcon.astro
+++ b/src/components/ActionIcon.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from 'astro:assets';
 
-const { icon } = Astro.props;
+const { icon, width="25", height="25" } = Astro.props;
 ---
 
 <actionicon>
-    <Image alt=`${icon}` class="lost-action-icon" loading="eager" width="25" height="25" src=`/drs/actions/${icon}.png`` />
+    <Image alt=`${icon}` class="lost-action-icon" loading="eager" width=`${width}` height=`${height}` src=`/drs/actions/${icon}.png`` />
 </actionicon>
