--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -16,8 +16,32 @@
 	margin-right: -0.125em;
 	margin-left: 0.075em;
 	vertical-align: baseline;
-	width: 25px;
-	height: 25px;
+}
+
+.holster-table{
+	font-size: 20px;
+	width: 50%;
+	margin: auto;
+	empty-cells: hide;
+	align-items: center;
+
+	th{
+		color: white;
+		background-color: rgb(175, 35, 35);
+	}
+
+	td{
+		margin: 0 auto;
+		text-align: center;
+	}
+
+	tr:nth-child(even) {
+		background-color: rgb(29, 29, 29);
+	  }
+	  
+	tr:nth-child(odd) {
+		background-color: rgb(54, 54, 54);
+	}
 }
 
 .social-icons a,
