--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -19,8 +19,11 @@
 }
 
 .holster-table{
+	max-width: fit-content;
+	margin-left: auto;
+	margin-right: auto;
 	font-size: 20px;
-	width: 50%;
+	width: 100%;
 	margin: auto;
 	empty-cells: hide;
 	align-items: center;
