Added secret, added phys/caster holsters, some typos here and there are fixed.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -59,7 +59,18 @@ table.dps{
 	th{
 		background-color: rgb(175, 35, 35);
 	}
+}
 
+table.phys{
+	th{
+		background-color: rgb(212, 183, 42);
+	}
+}
+
+table.caster{
+	th{
+		background-color: rgb(99, 46, 167);
+	}
 }
 
 .hidden-right-border{
