Added more to slimes, added golems guide.

--- a/src/components/ActionIcon.astro
+++ b/src/components/ActionIcon.astro
@@ -5,5 +5,5 @@ const { icon, width="25", height="25" } = Astro.props;
 ---
 
 <actionicon>
-    <Image alt=`${icon}` class="lost-action-icon" loading="eager" width=`${width}` height=`${height}` src=`/drs/actions/${icon}.png`` />
+    <Image alt=`${icon}` class="lost-action-icon" loading="eager" width=`${width}` height=`${height}` src=`/drs/actions/${icon}.png` />
 </actionicon>
