--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ import { Image } from 'astro:assets';
   }
 </style>
 <footer class="footer">
-  <strong>Want to learn or discuss more? Join the <a href="https://discord.gg/foexiv" target="_blank">Field Ops Enjoyer [NA]</a> Discord</strong>
+  <strong>Want to learn or discuss more? Join the <a href="https://discord.gg/foexiv" target="_blank">Field Ops Enjoyer</a> Discord</strong>
   <div class="suggestions-complaints">
     <p>Contact me @ onlymlems on discord</p>
   </div>
