--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,18 +5,18 @@ import { Image } from 'astro:assets';
 <style>
   footer {
     background-color: var(--sl-color-gray-6);
-    color: var(--sl-color-white);
+    /* color: var(--sl-color-white); */
     position: fixed;
     display: flex;
     justify-content: center;
     align-items:center;
     left: 0;
     bottom: 0;
-    height: 4rem;
+    height: 3.5rem;
     width: 100%;
     font-size:1rem;
     margin-left: 0px;
-    border-top: 1px solid hsl(224, 10%, 10%);
+    /* border-top: 1px solid hsl(224, 10%, 10%); */
     padding:5px;
   }
 </style>
