--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -5,9 +5,34 @@
 	/* --sl-color-bg: hsl(240, 2%, 13%); */
 	/* Font color */
 	--sl-color-white: hsl(0, 0%, 100%);
+	--sl-color-text: hsl(0, 0%, 85%);
 	/* Main Content Width */
-	--sl-content-width: 80%;
+	--sl-content-width: 75rem;
 	--sl-font: 'Comfortaa', system-ui
+}
+
+@media (min-width: 50em) {
+	:root {
+		--sl-content-width: 80rem;
+		--sl-nav-height: 4rem;
+		--sl-nav-pad-x: 1.5rem;
+		--sl-text-h1: var(--sl-text-5xl);
+		--sl-text-h2: var(--sl-text-4xl);
+		--sl-text-h3: var(--sl-text-3xl);
+		--sl-text-h4: var(--sl-text-2xl);
+	}
+}
+
+@media (min-width: 72rem) {
+	:root {
+		--sl-content-width: 20rem;
+		--sl-content-pad-x: 1.5rem;
+		--sl-mobile-toc-height: 0rem;
+	}
+}
+
+.social-icons::after {
+  display: none;
 }
 
 /* comfortaa-latin-wght-normal */
