--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -13,7 +13,7 @@
 
 @media (min-width: 50em) {
 	:root {
-		--sl-content-width: 80rem;
+		--sl-content-width: 80%;
 		--sl-nav-height: 4rem;
 		--sl-nav-pad-x: 1.5rem;
 		--sl-text-h1: var(--sl-text-5xl);
