--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -2,28 +2,28 @@
 	/* Sidebar color */
 	/* --sl-color-gray-6: hsl(200, 5%, 11%); */
 	/* Content background color */
-	/* --sl-color-bg: hsl(240, 2%, 13%); */
+	--sl-color-bg: hsl(240, 2%, 13%);
+	--sl-color-bg-nav: hsl(240, 2%, 13%);
 	/* Font color */
 	--sl-color-white: hsl(0, 0%, 100%);
 	--sl-color-text: hsl(0, 0%, 85%);
 	/* Main Content Width */
-	/* --sl-content-width: 50rem; */
+	/* --sl-content-width: 55rem;
+	--sl-sidebar-width: 20rem;
+	--sl-sidebar-pad-x: 0; */
 	--sl-font: 'Comfortaa', system-ui
 }
 
-@media (min-width: 50em) {
-	:root {
-		--sl-nav-height: 4rem;
-		--sl-nav-pad-x: 1.5rem;
-	}
-}
-
-@media (min-width: 75rem) {
-	:root {
-		--sl-content-width: 50rem;
-		--sl-content-pad-x: 1.5rem;
-		--sl-mobile-toc-height: 0rem;
-	}
+.starlight-aside-right {
+  position: fixed;
+  top: var(--sl-header-height, 0);
+  right: 0;
+  height: calc(100vh - var(--sl-header-height, 0));
+  border-left: 1px solid var(--sl-color-border);
+  background: var(--sl-color-bg);
+  padding: 1rem;
+  overflow-y: auto;
+  z-index: 100;
 }
 
 .social-icons::after {
@@ -133,23 +133,6 @@ table.healer{
 	color: hsl(0, 0%, 70%);
 }
 
-/* .main-pane {
-	--sl-content-margin-inline: 10% !important;
-} */
-
-.sidebar-content {
-	background-color: var(--sl-color-bg);
-}
-
-.sidebar-pane{
-	z-index: 0;
-}
-
- @media(max-width: 800px){
-	.sidebar-pane{
-		z-index: 5;
-	}
-}
 
 h1,
 h2,
@@ -165,30 +148,9 @@ hr {
 	background-color: #74737a;
 }
 
-/* Wholehogg diagram so its visible on the actual site */
-.excalidraw {
-	min-height: 600px;
-}
-
-.suggestions-complaints {
-	position:fixed;
-	right:2%;
-}
-
-.contact-form{
-	min-height:1000px;
-	min-width:50%;
-}
-
-/* Playstation Macro for Vault Knights */
-.dkt-macro {
-	min-width: 200px;
-	max-width: 10%;
-}
-
 #_top{
 	display:flex;
-	justify-content: center;;
+	justify-content: center;
 }
 
 /* Images on start of each ulti phase */
